# portfolio-italian-real-estate

./: .dockerignore  .env.example  Dockerfile  Dockerfile.airflow  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
dags/: __init__.py  dag_utils.py  datalake_population_dag.py  mongodb_etl_dag.py  postgres_migration_dag.py
docker/: entrypoint.sh  init-mongo.js  init-postgres.sql
scripts/: __init__.py  generate_synthetic_data.py  pipeline_tui.py  run_etl.py  run_migration.py  run_scraping.py  setup_databases.py  train_model.py  tui_docker.sh
src/italian_real_estate/: __init__.py
src/italian_real_estate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/italian_real_estate/config/: __init__.py  logging_config.py  settings.py
src/italian_real_estate/core/: __init__.py  connections.py  date_utils.py  dict_utils.py  numeric_utils.py  string_utils.py
src/italian_real_estate/data/: __init__.py  provinces.csv
src/italian_real_estate/etl/: __init__.py  extractors.py  transformers.py  warehouse_loader.py
src/italian_real_estate/migration/: __init__.py  batch_processor.py  dimension_processors.py  fact_loader.py  postgres_utils.py  schema.py
src/italian_real_estate/migration/translation/: __init__.py  batch_translator.py  cache.py  custom_translations.py  translator.py
src/italian_real_estate/ml/: __init__.py  data_preparation.py  feature_engineering.py  model_evaluator.py  model_trainer.py  rent_predictor.py
src/italian_real_estate/scraping/: __init__.py  datalake_populator.py  http_client.py  listing_parser.py  selenium_handler.py
src/italian_real_estate/synthetic_data/: __init__.py  data_extractor.py  gpu_utils.py  knn_generator.py  postprocessor.py  preprocessor.py  real_data_exporter.py
src/italian_real_estate/utils/: __init__.py  db_explorer.py  progress.py  tui.py
